--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,17 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    //for intent animation
+    implementation 'com.github.hajiyevelnur92:intentanimation:1.0'
+    //for livedata
+    implementation "android.arch.lifecycle:extensions:1.0.0"
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.0"
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel:1.0.0"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata:1.0.0"
+    //for retrofit2
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    //for gson converter
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 }
